Code Cleanup
Found lots of silly logic errors in this check. Specifically ShootNoteSequence on some of our autos just using a constant value for wristangle. Need to fix later.